# invenio-audit-logs

./: .editorconfig  .git-blame-ignore-revs  AUTHORS.rst  CHANGES.rst  MANIFEST.in  README.rst  babel.ini  pyproject.toml  run-tests.sh  setup.cfg  setup.py
.tx/: config
docs/: api.rst  authors.rst  changes.rst  conf.py  configuration.rst  contributing.rst  index.rst  installation.rst  usage.rst
invenio_audit_logs/: __init__.py  config.py  ext.py  proxies.py  views.py
invenio_audit_logs/alembic/: 1743073617_create_audit_logs_branch.py  1743073720_create_audit_logs_table.py  42fa8d3bbc0c_change_datetime_types.py
invenio_audit_logs/records/: __init__.py  api.py  models.py
invenio_audit_logs/records/mappings/templates/: __init__.py
invenio_audit_logs/records/mappings/templates/os-v1/: __init__.py
invenio_audit_logs/records/mappings/templates/os-v1/auditlogs/: datastream-auditlog-v2.0.0.json
invenio_audit_logs/records/systemfields/: __init__.py  action.py
invenio_audit_logs/resources/: __init__.py  config.py  resource.py
invenio_audit_logs/services/: __init__.py  action.py  config.py  permissions.py  results.py  schema.py  service.py  uow.py
tests/: conftest.py  test_alembic.py  test_invenio_audit_logs.py
tests/mock_module/: __init__.py
tests/mock_module/auditlog/: __init__.py  actions.py  context.py
tests/services/: __init__.py  conftest.py  test_action_builder.py  test_service.py
